--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 3.31)
+cmake_minimum_required(VERSION 4.0)
 
 set (This modern_c)
 project(
-    $(This)
+    ${This}
     VERSION 0.1
     LANGUAGES C
 )
@@ -13,10 +13,10 @@ set(CMAKE_BUILD_TYPE Debug)
 
 #include(CTest)
 
-add_library(Functions lib/fxns.c)
-target_include_directories(Functions PUBLIC include)
+add_library(Functions  STATIC lib/fxns.c)
+target_include_directories(Functions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 #add_subdirectory(test)
 
 add_executable(${This} src/main.c)
-target_link_libraries(${This} Functions)
+target_link_libraries(${This} PRIVATE Functions)
